Grammar.txt
crn             -> crn = { RootSList }
RootSList       -> RootS RootSopt
RootSopt        -> , RootS RootSopt | epsilon
RootS           -> ConcS | StepS
ConcS           -> conc[species, number]
StepS           -> step [ CommandSList ]
CommandSList    -> CommandS CommandSopt
CommandSopt     -> , CommandS CommandSopt | epsilon
CommandS        -> Arith | Conditional .. 
ModuleS         -> add ...
CondiitonalS    -> ifGT ...
